/* Changes-1.05.txt */

--- Updates ----------

CCore/src/net/PTPBoot.cpp
CCore/tools/PTPServer/PTPConProc.cpp

  Fixed Min() usage. Explicit template parameter is added.

*Core/CCore/inc/task/Event.h

  Fixed declaration of the 1st constructor of Event to avoid error-prone overloading.

CCore/inc/Log.h

  Fixed UserLog::Cursor. NoCopy is added.

CCore/inc/SafeBuf.h

  Moved from PrintFile.

CCore/inc/printf/PrintBase.h

  PrintOutAdapter<const NoPrintType> is added

CCore/inc/print/PrintCon.h

  PrintOutAdapter<const ConType> is added

CCore/inc/gadget/Meta.h

  UnRef<T> and UnConst<T> are added

--- New features -----

WIN32 IntelRandom

LIN64 target for 64-bit Linux host platform

Scanf() is added.

CharIsPunct() is added.

CharIsSpaceOrPunct() is added.

----------------------